--- a/blog_posts/2016-07-10.html
+++ b/blog_posts/2016-07-10.html
@@ -46,7 +46,7 @@
             <li>You can never have too many classes in Ruby.</lu>
             <li>If your methods are more than 10 lines long, then you are probably not following the "S" in the SOLID princple.</li>
         </ul>
-    <p> Of course there are other important aspects of the SOLID philosphy, like open-closed princple(O) and dependency inversion(D). I feel that ThoughBot's post <a href="https://robots.thoughtbot.com/back-to-basics-solid">here</a> also gives a "solid" and quick explanation of the SOLID principle</p>
+    <p> Of course there are other important aspects of the SOLID philosphy, like open-closed princple(O) and dependency inversion(D). I feel that Thoughtbot's post <a href="https://robots.thoughtbot.com/back-to-basics-solid">here</a> also gives a "solid" and quick explanation of the SOLID principle</p>
     <p>The last day was spent picking up RSpec. RSPec is simply a gem consisting of three other gems that tests your ruby code. We will be using RSpec the second week for creating the game Minesweeper but under the TDD philosophy, or writing our tests out first before writing the Ruby code. This encourages writing the minimal amount of ruby possible in order to pass each test, as well as ceating modular code</p>
     <p>The second week brings more TDD and Algorithms, and I am really excited to learn more!</p>
 </div>
