Add link to blog on medium

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
       <div class="slider"></div>
       </li>
     </li>
-      <li class="navbar-slider"><a href="blog.html" class= "navbar-projects"><span class="project-text">Blog</span></a>
+      <li class="navbar-slider"><a href="https://medium.com/@dylynch91" class= "navbar-projects"><span class="project-text">Blog</span></a>
       <div class="slider"></div>
     </li>
     </ul> 
