--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   </div>
     <a href= "http://www.github.com/lynchd2" class="github-black">Click</a>
     <a href="mailto:dylynch91@gmail.com" class="mail-black"></a>
+    <a href="https://drive.google.com/file/d/1lSbFgWgfb98pvFd8mTTyjLGU_rAIE6PR0sNgDdkeq5XqS4mdiWzTy65t2pnYuI33likWEMF0n9OdHCfR/view?usp=sharing" class="resume-black"></a>
  </div>
 </body>
 </html>
