Update projects and about section

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
               <h3 class="greetings-header text-center">Greetings, World!</h3>
               <div class="about-paragraph">
                 <div class="profile-head"></div>
-                <p>My name is Dylan Lynch and I am a web developer located in the Northeast region of the United States. I enjoy programming and learning new technology.</p>
+                <p>My name is Dylan Lynch. I am a full-stack web developer looking to build things, break those things, and then fix them.</p>
                 <p>Aside from programming, I am an avid runner, I enjoy reading, my most recent project being the Game of Thrones Series, and I love traveling and exploring new places. </p>
               </div>
             </div>
@@ -59,6 +59,7 @@
                   <li class="front-tech">HTML & CSS</li>
                   <li class="front-tech">SCSS</li>
                   <li class="front-tech">Javascript</li>
+                  <li class="front-tech">Angular</li>
                   <li class="front-tech">JQuery</li>
                   <li class="front-tech">Bootstrap</li>
                   <li class="front-tech">AJAX</li>
@@ -71,6 +72,7 @@
                 <p>
                   <li class="back-tech">Ruby</li>
                   <li class="back-tech">Ruby on Rails</li>
+                  <li class="back-tech">Sinatra</li>
                   <li class="back-tech">SQLite</li>
                   <li class="back-tech">PostgreSQL</li>
                   <li class="back-tech">Heroku</li>
@@ -82,7 +84,7 @@
             <h3 class="technology-header">Other Technology:</h3>
             <p>
               <li class="back-tech">Frequent use of Git for version control and Github to host projects.</li>
-              <li class="back-tech">RSpec for Test-Driven developemnt and Behavior-Driven development.</li>
+              <li class="back-tech">RSpec and capybara for Test-Driven developemnt and Behavior-Driven development.</li>
             </p>
           </div>
         </div>
