--- a/projects.html
+++ b/projects.html
@@ -60,20 +60,20 @@
     <div class="container-fluid">
     <div class="row row-projects">
       <div class="col-xs-12 col-sm-12 col-md-6">
-        <a href="https://codepen.io/lynchd2/full/jqeWJm/"><img src="assets/images/Twitch-API.jpeg"  class="second-project-image img-responsive"></a>
+        <a href="https://github.com/lynchd2/assignment_fideligard_spa"><img src="http://image.shutterstock.com/z/stock-photo--d-finance-stock-market-stock-exchange-273602777.jpg"  class="second-project-image img-responsive"></a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-6">
         <div class="thumbnail project-description">
-          <a href="https://codepen.io/lynchd2/full/jqeWJm/" class="second-project-link text-center"><h2>Twitchtv JSON API</h2></a>
+          <a href="https://github.com/lynchd2/assignment_fideligard_spa" class="second-project-link text-center"><h2>Historical Stock Simulator</h2></a>
           <p class="second-project-description">
-            A project inspired by FreeCodeCamp. Using the Twitch API, JSON data is gathered and used to determine whether a user is online, offline, or non-existent. A user's icon, the game they are playing and their status are posted if the user appears online.
+            Take it back to 2014 and play the stock market. Devloped using Angular and Javascript, and using the Yahoo Finance API to collect historical stock data, buy and sell stocks to see how well you may have done if you played the stock market.
           </p>
         </div>
         <div class="second-project-buttons">
-          <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Angular</a>
           <a href="#" class="btn btn-lg btn-hide disabled">Javascript</a>
-          <a href="#" class="btn btn-lg btn-hide disabled">JQuery</a>
-          <a href="#" class="btn btn-lg btn-hide disabled">AJAX</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">HTML and CSS</a>
+          <a href="#" class="btn btn-lg btn-hide disabled">Bootstrap</a>
         </div>
       </div>
     </div>
@@ -84,17 +84,18 @@
     <div class="container-fluid">
       <div class="row row-projects">
         <div class="col-xs-12 col-sm-12 col-md-6">
-          <a href="https://codepen.io/lynchd2/full/VaGbev/"><img src="assets/images/Wiki-Viewer.jpeg"  class="third-project-image img-responsive"></a>
+          <a href="https://github.com/lynchd2/project_danebook"><img src="assets/images/danebook"  class="third-project-image img-responsive"></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
           <div class="thumbnail project-description">
-            <a href="https://codepen.io/lynchd2/full/VaGbev/" class="third-project-link text-center"><h2>Wikipedia Viewer</h2></a>
+            <a href="https://github.com/lynchd2/project_danebook" class="third-project-link text-center"><h2>Danebook</h2></a>
             <p class="third-project-description">
-              Another project inspired by FreeCodeCamp. Using the Wikipedia API, a user inputs a search term and the a list of ten results from Wikipedia, as well as the first couple sentences from the description of each result, are listed. A user can click anywhere in each result to be redirected to the corresponding article on Wikipedia.
+              Developed a fully functional social-networking web application using Ruby on Rails with a RESTful approach. The project uses PostgreSQL as a database, and utilizes Amazon S3 to store user uploaded images. Features include commenting and liking on images and posts, uploading photos to a user's profile, commenting on posts and a user's wall, and "friending" other users.
             </p>
           </div>
           <div class="third-project-buttons">
             <a href="#" class="btn btn-lg btn-hide disabled">HTML & CSS</a>
+            <a href="#" class="btn btn-lg btn-hide disabled">Ruby on Rails</a>
             <a href="#" class="btn btn-lg btn-hide disabled">Javascript</a>
             <a href="#" class="btn btn-lg btn-hide disabled">JQuery</a>
             <a href="#" class="btn btn-lg btn-hide disabled">AJAX</a>
