--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
     <div class="container-fluid">
     <div class="row row-projects">
       <div class="col-xs-12 col-sm-12 col-md-6">
-        <a href="https://github.com/lynchd2/assignment_fideligard_spa"><img src="http://image.shutterstock.com/z/stock-photo--d-finance-stock-market-stock-exchange-273602777.jpg"  class="second-project-image img-responsive"></a>
+        <a href="https://github.com/lynchd2/assignment_fideligard_spa"><img src="http://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2014/11/12/102179139-stock-market-board.1910x1000.jpg"  class="second-project-image img-responsive"></a>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-6">
         <div class="thumbnail project-description">
