Update project page

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
         <div class="thumbnail project-description">
           <a href="https://github.com/lynchd2/assignment_fideligard_spa" class="second-project-link text-center"><h2>Historical Stock Simulator</h2></a>
           <p class="second-project-description">
-            Take it back to 2014 and play the stock market. Devloped using Angular and Javascript, and using the Yahoo Finance API to collect historical stock data, buy and sell stocks to see how well you may have done if you played the stock market.
+            Take it back to 2014 and play the stock market. Developed using Angular and Javascript, and using the Yahoo Finance API to collect historical stock data, buy and sell stocks to see how well you may have done had you played the stock market.
           </p>
         </div>
         <div class="second-project-buttons">
@@ -108,11 +108,11 @@
   <div class="jumbotron projects fourth-project">
     <h2 class="text-center">Other things I have built:</h2>
     <p class="other-programs-text">
-      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/blob/master/tic_tac_toe.rb" class="other-project-link">Command line Tic-Tac-Toe written in Ruby</a></ol>
-      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/tree/master/hangman" class="other-project-link">Command line Hangman written in Ruby</a></ol>
-      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/TOP-Ruby-Programming/blob/master/connect_four/lib/connect_four.rb" class="other-project-link">Command line Connect-Four written in Ruby</a></ol>
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/assignment_sinatra_blackjack" class="other-project-link">BlackJack Using Sinatra</a></ol>
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/project_tetris_js" class="other-project-link">Tetris written in pure Javascript</a></ol>
+      <ol class="other-programs-built text-center"><a href ="https://github.com/lynchd2/better_home" class="other-project-link">Better Home Web App using Ruby on Rails and developed with a team</a></ol>
     </p>
-    <h3>Feel free to browse my Github <a href="https://www.github.com/lynchd2" class="other-project-link">here</a> or my Codepen <a href="https://codepen.io/lynchd2/" class="other-project-link">here</a>.</h3>
+    <h3>Feel free to browse my Github for other projects <a href="https://www.github.com/lynchd2" class="other-project-link">here</a></h3>
     <div class="pos arrowTop arrowTopAbout"></div>
   </div>
 </body>
